--- a/System-LvLUp-main/Alarm/status.html
+++ b/System-LvLUp-main/Alarm/status.html
@@ -21,7 +21,7 @@
         <div class="level-info">
           <div class="level-number" id="lvlValue">1</div>
           <div>LEVEL</div>
-          <button id="reset-button">Reset</button>
+          <!--<button id="reset-button">Reset</button>-->
         </div>
         <div class="details">
           <p>
