--- a/SysLvLUp/Alarm/status.html
+++ b/SysLvLUp/Alarm/status.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/status.css" />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesoSince" />
+      href="https://fontawesome.com/icons" />
       
     <div class="status-container">
       <div class="status-title">STATUS</div>
