--- a/SysLvLUp/Alarm/status.html
+++ b/SysLvLUp/Alarm/status.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/status.css" />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha384-k6RqeWeci5ZR/Lv4MR0sA0FfDOMh0A0wD1y4zZz4G6W1W2Z8X9J9b6cM4e7qM4e" crossorigin="anonymous">
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" >
       
     <div class="status-container">
       <div class="status-title">STATUS</div>
