--- a/SysLvLUp/Alarm/status.html
+++ b/SysLvLUp/Alarm/status.html
@@ -130,8 +130,7 @@
           </div>
           <div class="status-bar">
             <span class="emoji"
-              ><i class="fa-solid fa-bolt-lightning"></i
-            ></span>
+              ><i class="fa-solid fa-bolt-lightning"></i></span>
             <span class="STM">STM</span>
             <div class="bar">
               <div class="fill" id="stm-fill" style="width: 100%"></div>
