--- a/SysLvLUp/Alarm/dental-study.html
+++ b/SysLvLUp/Alarm/dental-study.html
@@ -65,6 +65,9 @@
             <button id="reset-button" onclick="resetTimer()">Reset</button>
         </div>
     </div>
+      <div id="notification" class="notification hidden">
+        <p>Time's up! Great job on your study session!</p>
+    </div>
 
     <script src="js/dental-study.js"></script>
 </body>
