--- a/SysLvLUp/Alarm/status.html
+++ b/SysLvLUp/Alarm/status.html
@@ -209,9 +209,9 @@
           <span>[SIDE] New World</span> <span class="status_danger">Lv.5</span>
         </div>
         <div class="quest">
-          <span>[MAIN] Dental Studies</span>
+          <span>[MAIN] Learning Pathways</span>
 <span class="status dental-emoji">
-    <a href="dental-study.html" class="status-link">🦷</a>
+    <a href="dental-study.html" class="status-link">📖</a>
 </span>
         </div>
       </div>
