--- a/SysLvLUp/Alarm/dental-study.html
+++ b/SysLvLUp/Alarm/dental-study.html
@@ -15,26 +15,26 @@
     </div>
     <div class="quest-box" id="quest-box">
         <div class="quest-header">
-            <span>ⓘ Dental Study Quests</span>
+           <span>ⓘ Scholarly Endeavors</span>
         </div>
         <div class="quest-details">
-            <p>[Daily Quest: Dental Study Training has arrived.]</p>
+            <p>[Daily Quest: Academic Pursuits Training has arrived.]</p>
         </div>
         <div class="goal-section" id="goal-section">
             <h2>GOAL</h2>
             <div class="goal-item">
-                <span class="task-name">Comprehensive Dental Study Session</span>
-                <button class="start-button" onclick="openPomodoro('Comprehensive Dental Study Session', 'anatomy-checkbox')"><i class="fa-solid fa-play"></i></button>
+                <span class="task-name">Comprehensive Study Session</span>
+                <button class="start-button" onclick="openPomodoro('Comprehensive Study Session', 'anatomy-checkbox')"><i class="fa-solid fa-play"></i></button>
                 <input type="checkbox" id="anatomy-checkbox" class="task-checkbox" disabled />
             </div>
             <div class="goal-item">
-                <span class="task-name">Dental Study and Review</span>
-                <button class="start-button" onclick="openPomodoro('Dental Study and Review', 'hygiene-checkbox')"><i class="fa-solid fa-play"></i></button>
+                <span class="task-name"> Study and Review</span>
+                <button class="start-button" onclick="openPomodoro('Study and Review', 'hygiene-checkbox')"><i class="fa-solid fa-play"></i></button>
                 <input type="checkbox" id="hygiene-checkbox" class="task-checkbox" disabled />
             </div>
             <div class="goal-item">
-                <span class="task-name">Prepare for Dental Exam</span>
-                <button class="start-button" onclick="openPomodoro('Prepare for Dental Exam', 'exam-checkbox')"><i class="fa-solid fa-play"></i></button>
+                <span class="task-name">Prepare for Exam</span>
+                <button class="start-button" onclick="openPomodoro('Prepare for Exam', 'exam-checkbox')"><i class="fa-solid fa-play"></i></button>
                 <input type="checkbox" id="exam-checkbox" class="task-checkbox" disabled />
                
             </div>
