--- a/SysLvLUp/Alarm/status.html
+++ b/SysLvLUp/Alarm/status.html
@@ -214,6 +214,10 @@
     <a href="dental-study.html" class="status-link">📖</a>
 </span>
         </div>
+        <div class="quest">
+          <span>[EXPORT] Data</span>
+          <button id="export-button" class="status">⬇</button>
+      </div>
       </div>
     </div>
 
