--- a/SysLvLUp/Alarm/status.html
+++ b/SysLvLUp/Alarm/status.html
@@ -221,6 +221,14 @@
       </div>
     </div>
 
+<!-- Name Input Popup -->
+<div id="name-popup" class="popup hidden">
+  <div class="popup-content">
+    <h2>Reveal Your Name 📜</h2>
+    <input type="text" id="name-input" placeholder="Speak your name, and the path shall be unveiled" />
+    <button id="submit-name">Submit</button>
+  </div>
+</div>
     <script src="js/status.js"></script>
   </body>
 </html>
