--- a/SysLvLUp/Alarm/dental-study.html
+++ b/SysLvLUp/Alarm/dental-study.html
@@ -46,7 +46,7 @@
         </div>
         <div class="warning-section">
             <p>
-                WARNING: Failure to complete the daily dental study quest will result in an
+                WARNING: Failure to complete the daily study quest will result in an
                 appropriate <span class="penalty">penalty</span>
             </p>
         </div>
