--- a/SysLvLUp/Alarm/dental-study.html
+++ b/SysLvLUp/Alarm/dental-study.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dental Study Quests</title>
+    <title>Study Quests</title>
     <link rel="stylesheet" href="css/dental-study.css" />
     <link
       rel="stylesheet"
