--- a/SysLvLUp/Alarm/status.html
+++ b/SysLvLUp/Alarm/status.html
@@ -34,7 +34,7 @@
             <span class="detail-text" id="ping-text">60</span>
             <input
               type="text"
-              class="detail-input"
+              class="detail-inputt"
               id="ping-input"
               placeholder="Enter ping"
               style="display: none"
