--- a/SysLvLUp/Alarm/status.html
+++ b/SysLvLUp/Alarm/status.html
@@ -34,8 +34,8 @@
             <span class="detail-text" id="ping-text">60</span>
             <input
               type="text"
-              class="detail-inputt"
-              id="ping-input"
+              class="detail-input"
+              id="ping-inputt"
               placeholder="Enter ping"
               style="display: none"
             />
