--- a/SysLvLUp/Alarm/status.html
+++ b/SysLvLUp/Alarm/status.html
@@ -31,7 +31,7 @@
           </p>
           <p>
             <strong>PING:</strong>
-            <span class="detail-text" id="ping-textt">60</span>
+            <span class="detail-text" id="ping-text">60</span>
             <input
               type="text"
               class="detail-input"
