--- a/SysLvLUp/Alarm/index.html
+++ b/SysLvLUp/Alarm/index.html
@@ -15,8 +15,11 @@
 
     <script src="js/login.js"></script>
 <script src="js/sync.js"></script>
+    <script src="js/database.js"></script>
+
 </body>
 </html>
+
 
 
 
