--- a/SysLvLUp/Alarm/index.html
+++ b/SysLvLUp/Alarm/index.html
@@ -16,9 +16,15 @@
     <script src="js/login.js"></script>
 <script src="js/sync.js"></script>
     <script src="js/database.js"></script>
+    <script>
+// This will sync all localStorage data to your MongoDB
+const sync = new LocalStorageSync('your-user-id');
+sync.syncToDatabase();
+</script>
 
 </body>
 </html>
+
 
 
 
