--- a/SysLvLUp/Alarm/status.html
+++ b/SysLvLUp/Alarm/status.html
@@ -208,6 +208,16 @@
         <div class="quest">
           <span>[SIDE] New World</span> <span class="status_danger">Lv.5</span>
         </div>
+        <h3>Gemini Quest Generator</h3>
+        <button class="gemini-button" id="generate-quest-btn">Generate a Quest ✨</button>
+        <div id="gemini-status"></div>
+        <div id="generated-quest" style="display:none;">
+            <div class="quest-item">
+                <span id="new-quest-title"></span>
+                <button id="tts-btn" class="gemini-button" style="padding: 5px 10px;"><i class="fas fa-volume-up"></i></button>
+            </div>
+            <p id="new-quest-description"></p>
+        </div>
         <div class="quest">
           <span>[MAIN] Learning Pathways</span>
 <span class="status dental-emoji">
