--- a/SysLvLUp/Alarm/status.html
+++ b/SysLvLUp/Alarm/status.html
@@ -208,6 +208,7 @@
         <div class="quest">
           <span>[SIDE] New World</span> <span class="status_danger">Lv.5</span>
         </div>
+        <div class="containeerr">
         <h3>Gemini Quest Generator</h3>
         <button class="gemini-button" id="generate-quest-btn">Generate a Quest ✨</button>
         <div id="gemini-status"></div>
@@ -217,6 +218,7 @@
                 <button id="tts-btn" class="gemini-button" style="padding: 5px 10px;"><i class="fas fa-volume-up"></i></button>
             </div>
             <p id="new-quest-description"></p>
+            </div>
         </div>
         <div class="quest">
           <span>[MAIN] Learning Pathways</span>
