--- a/SysLvLUp/Alarm/status.html
+++ b/SysLvLUp/Alarm/status.html
@@ -208,18 +208,17 @@
         <div class="quest">
           <span>[SIDE] New World</span> <span class="status_danger">Lv.5</span>
         </div>
-        <div class="containeerr">
-        <h3>Gemini Quest Generator</h3>
-        <button class="gemini-button" id="generate-quest-btn">Generate a Quest ✨</button>
-        <div id="gemini-status"></div>
-        <div id="generated-quest" style="display:none;">
+         <div class="quest-actions">
+            <button class="gemini-button" id="generate-quest-btn">Generate New Quest ✨</button>
+          </div>
+          <div id="gemini-status"></div>
+          <div id="generated-quest" style="display:none; margin-top: 20px;">
             <div class="quest-item">
                 <span id="new-quest-title"></span>
-                <button id="tts-btn" class="gemini-button" style="padding: 5px 10px;"><i class="fas fa-volume-up"></i></button>
+                <button id="tts-btn" class="gemini-button" style="padding: 5px 10px; font-size: 0.8em;"><i class="fas fa-volume-up"></i></button>
             </div>
-            <p id="new-quest-description"></p>
-            </div>
-        </div>
+            <p id="new-quest-description" style="margin-top: 10px; font-size: 0.9em;"></p>
+          </div>
         <div class="quest">
           <span>[MAIN] Learning Pathways</span>
 <span class="status dental-emoji">
