--- a/SysLvLUp/Alarm/index.html
+++ b/SysLvLUp/Alarm/index.html
@@ -67,7 +67,9 @@
     </div>
 
     <!-- Load scripts in correct order -->
+    <script src="js/auth-manager.js"></script>
     <script src="js/user-manager.js"></script>
+    <script src="js/multi-device-setup.js"></script>
     <script src="js/login.js"></script>
     <script>
     // Use centralized user manager for data synchronization
