--- a/SysLvLUp/Alarm/alarm.html
+++ b/SysLvLUp/Alarm/alarm.html
@@ -52,6 +52,9 @@
       </div>
     </div>
 
+    <!-- Load user management and authentication scripts -->
+    <script src="js/auth-manager.js"></script>
+    <script src="js/user-manager.js"></script>
     <script src="js/alarm.js"></script>
     
     <!-- Service Worker Registration -->
