--- a/SysLvLUp/Alarm/daily_quest.html
+++ b/SysLvLUp/Alarm/daily_quest.html
@@ -96,6 +96,10 @@
       </div>
     </div>
 
+    <!-- Load user management and authentication scripts -->
+    <script src="js/auth-manager.js"></script>
+    <script src="js/user-manager.js"></script>
+    
     <script src="js/daily_quest.js"></script>
     
     <!-- Service Worker Registration -->
