Implement dynamic key authentication system - replace static password with session-based dynamic keys

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 <body>
     <div class="login-container">
         <div id="ascend-text"></div> <!-- New div for the typing animation -->
-        <input type="password" id="password" placeholder="Place Your Key 🗝️ ">
+        <input type="password" id="password" placeholder="Enter Session Key 🔑">
         <p id="message" class="hidden"></p>
     </div>
 
