--- a/alarm.html
+++ b/alarm.html
@@ -52,6 +52,7 @@
       </div>
     </div>
 
+    <script src="js/auth-check.js"></script>
     <script src="js/user-manager.js"></script>
     <script src="js/alarm.js"></script>
     
