--- a/Initiation.html
+++ b/Initiation.html
@@ -43,9 +43,7 @@
         <p>Data imported successfully!</p>
     </div>
     
-    <!-- Load scripts in correct order -->
-    <script src="js/auth-check.js"></script>
-    <script src="js/user-manager.js"></script>
+    <!-- Only load the Initiation.js script since this page just handles the ritual -->
     <script src="js/Initiation.js"></script>
     
     <!-- Service Worker Registration -->
