--- a/Quest_Info_Physical.html
+++ b/Quest_Info_Physical.html
@@ -52,7 +52,8 @@
         </div>
     </div>
 
-    <!-- Only load the quest script -->
+    <!-- Load scripts in correct order -->
+    <script src="js/user-manager.js"></script>
     <script src="js/Quest_Info_Physical.js"></script>
     
     <!-- Service Worker Registration -->
