--- a/daily_quest.html
+++ b/daily_quest.html
@@ -97,6 +97,7 @@
     </div>
 
     <!-- Load scripts in correct order -->
+    <script src="js/user-manager.js"></script>
     <script src="js/daily_quest.js"></script>
     
     <!-- Service Worker Registration -->
