--- a/status.html
+++ b/status.html
@@ -29,6 +29,7 @@
             <div class="header-controls">
                 <button id="export-btn">Export Data</button>
                 <button id="import-btn">Import Data</button>
+                <button id="daily-reset-btn">Daily Reset</button>
                 <button id="reset-btn">Reset Data</button>
                 <button id="logout-btn">Logout</button>
             </div>
