--- a/status.html
+++ b/status.html
@@ -30,6 +30,7 @@
                 <button id="export-btn">Export Data</button>
                 <button id="import-btn">Import Data</button>
                 <button id="daily-reset-btn">Daily Reset</button>
+                <button id="force-reset-check-btn">🔍 Debug Reset</button>
                 <button id="reset-btn">Reset Data</button>
                 <button id="logout-btn">Logout</button>
             </div>
