--- a/status.html
+++ b/status.html
@@ -78,12 +78,12 @@
                     <div class="module">
                         <div class="stats-grid">
                             <div class="stat-row">
-                                <div class="stat-chip"><span class="chip-label"><span class="icon">❤️</span>HP</span><div class="chip-bar stat-bar"><div id="hp-fill" class="chip-fill hp-fill" style="width: 80%"></div><span class="stat-value">80</span></div></div>
-                                <div class="stat-chip"><span class="chip-label"><span class="icon">✨</span>MP</span><div class="chip-bar stat-bar"><div id="mp-fill" class="chip-fill mp-fill" style="width: 60%"></div><span class="stat-value">60</span></div></div>
+                                <div class="stat-chip"><span class="chip-label"><span class="icon">❤️</span>HP</span><div class="stat-bar"><div class="chip-bar"><div id="hp-fill" class="chip-fill hp-fill" style="width: 80%"></div></div><span class="stat-value">80</span></div></div>
+                                <div class="stat-chip"><span class="chip-label"><span class="icon">✨</span>MP</span><div class="stat-bar"><div class="chip-bar"><div id="mp-fill" class="chip-fill mp-fill" style="width: 60%"></div></div><span class="stat-value">60</span></div></div>
                             </div>
                             <div class="stat-row">
-                                <div class="stat-chip"><span class="chip-label"><span class="icon">🏃</span>STM</span><div class="chip-bar stat-bar"><div id="stm-fill" class="chip-fill stm-fill" style="width: 60%"></div><span class="stat-value">60</span></div></div>
-                                <div class="stat-chip"><span class="chip-label"><span class="icon">⭐</span>EXP</span><div class="chip-bar stat-bar"><div id="exp-fill" class="chip-fill exp-fill" style="width: 45%"></div><span class="stat-value">45</span></div></div>
+                                <div class="stat-chip"><span class="chip-label"><span class="icon">🏃</span>STM</span><div class="stat-bar"><div class="chip-bar"><div id="stm-fill" class="chip-fill stm-fill" style="width: 60%"></div></div><span class="stat-value">60</span></div></div>
+                                <div class="stat-chip"><span class="chip-label"><span class="icon">⭐</span>EXP</span><div class="stat-bar"><div class="chip-bar"><div id="exp-fill" class="chip-fill exp-fill" style="width: 45%"></div></div><span class="stat-value">45</span></div></div>
                             </div>
                             <div class="fatigue-ring" style="--fatigue:60">
                                 <svg viewBox="0 0 80 80" width="80" height="80" aria-hidden="true">
