--- a/status.html
+++ b/status.html
@@ -50,7 +50,7 @@
                     <div class="meta-drop">
                         <div class="meta-trigger">DETAILS</div>
                         <div class="meta-content">
-                            <div class="meta-row"><span class="muted">NAME</span><span id="name-text">Jinwoo</span></div>
+                            <div class="meta-row"><span class="muted">NAME</span><span id="job-text">Jinwoo</span></div>
                             <div class="meta-row"><span class="muted">GUILD</span><span id="guild-text">Reaper</span></div>
                             <div class="meta-row"><span class="muted">RACE</span><span id="race-text">Hunter</span></div>
                             <div class="meta-row"><span class="muted">REGION</span><span id="region-text">TN</span></div>
@@ -63,7 +63,10 @@
                     <div class="quests-mini">
                         <div class="quests-mini-title">ACTIVE QUESTS</div>
                         <ul class="quests-mini-list">
-                            <li><span class="dot done"></span> Grunt Work</li>
+                            <li>
+                                <span style="display:inline-flex; align-items:center; gap:8px;"><span class="dot success"></span> Grunt Work</span>
+                                <span class="pill muted"><span class="pill-prefix">Lv.</span><span id="player-level-pill-2">1</span></span>
+                            </li>
                             <li>
                                 <a href="daily_quest.html" aria-label="Go to Daily Quests">
                                     <span style="display:inline-flex; align-items:center; gap:8px;"><span class="dot"></span> [MAIN] Power</span>
@@ -76,7 +79,7 @@
                 </div>
                 <div class="col-right">
                     <div class="job-title">
-                        <div class="row"><span class="muted">JOB</span><span id="job-text">Shadow Monarch</span></div>
+                        <div class="row"><span class="muted">JOB</span><span id="name-text">Shadow Monarch</span></div>
                         <div class="row"><span class="muted">TITLE</span><span id="title-text">The One Who Overcame Adversity</span></div>
                     </div>
 
