--- a/status.html
+++ b/status.html
@@ -79,8 +79,8 @@
                 </div>
                 <div class="col-right">
                     <div class="job-title">
-                        <div class="row"><span class="muted">JOB</span><span id="name-text">Shadow Monarch</span></div>
-                        <div class="row"><span class="muted">TITLE</span><span id="title-text">The One Who Overcame Adversity</span></div>
+                        <div class="row"><span class="muted">JOB:</span><span id="name-text">Shadow Monarch</span></div>
+                        <div class="row"><span class="muted">TITLE:</span><span id="title-text">The One Who Overcame Adversity</span></div>
                     </div>
 
                     <div class="module">
