--- a/status.html
+++ b/status.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <!-- Name Input Modal (shown for new players) -->
-    <div id="name-input-modal" class="modal">
+    <div id="name-input-modal" class="modal hidden">
         <div class="modal-content">
             <h2>🎮 Welcome to SysLvLUp!</h2>
             <p>Please enter your character name to begin your journey:</p>
