--- a/status.html
+++ b/status.html
@@ -21,6 +21,14 @@
         </div>
     </div>
 
+    <!-- Loading Ring -->
+    <div id="loading-ring" class="loading-container">
+        <div class="loading-ring">
+            <div class="loading-spinner"></div>
+            <div class="loading-text">Loading...</div>
+        </div>
+    </div>
+
     <div id="status-content" class="hidden neon-frame">
         <div class="panel-glass">
             <div class="panel-title">STATUS</div>
