--- a/status.html
+++ b/status.html
@@ -94,7 +94,8 @@
           <div class="fatigue-section">
             <div class="fatigue-ring">
               <svg class="progress-ring" width="80" height="80">
-                <circle class="progress-ring__circle" id="fatringprogg" stroke="#56ccf2" stroke-width="8" fill="transparent" r="34" cx="40" cy="40" style="stroke-dasharray: 213.628, 213.628; stroke-dashoffset: 213.628;"></circle>
+                <circle class="progress-ring__track" stroke="rgba(255,255,255,0.15)" stroke-width="7" fill="transparent" r="34" cx="40" cy="40"></circle>
+                <circle class="progress-ring__circle" id="fatringprogg" stroke="#56ccf2" stroke-width="7" fill="transparent" r="34" cx="40" cy="40" style="stroke-dasharray: 213.628, 213.628; stroke-dashoffset: 213.628;"></circle>
               </svg>
               <div class="fatigue-label">
                 Fatigue: <span class="fatigue-value" id="Fatvalue">0</span>%
