--- a/status.html
+++ b/status.html
@@ -98,7 +98,7 @@
                 <circle class="progress-ring__circle" id="fatringprogg" stroke="#56ccf2" stroke-width="7" fill="transparent" r="34" cx="40" cy="40" style="stroke-dasharray: 213.628, 213.628; stroke-dashoffset: 213.628;"></circle>
               </svg>
               <div class="fatigue-label">
-                Fatigue: <span class="fatigue-value" id="Fatvalue">0</span>%
+                Fatigue: <span class="fatigue-value" id="Fatvalue">0</span>
               </div>
             </div>
           </div>
