--- a/status.html
+++ b/status.html
@@ -179,11 +179,17 @@
                 <span class="quest-level">Lv.1</span>
               </div>
             </div>
-            <div class="quest-item clickable" onclick="window.location.href='daily_quest.html'">
-              <div class="quest-info">
-                <span class="quest-type">[MAIN] Power</span>
-                <span class="quest-level">Lv.1</span>
-              </div>
+                        <div class="quest-item clickable" onclick="window.location.href='daily_quest.html'">
+                <div class="quest-info">
+                    <span class="quest-type">[MAIN] Power</span>
+                    <span class="quest-level">Lv.1</span>
+                </div>
+            </div>
+            <div class="quest-item clickable" onclick="window.location.href='knowledge-quests.html'">
+                <div class="quest-info">
+                    <span class="quest-type">[MAIN] Knowledge</span>
+                    <span class="quest-level">Lv.1</span>
+                </div>
             </div>
             <div class="quest-item">
               <div class="quest-info">
