--- a/dental-study.html
+++ b/dental-study.html
@@ -83,6 +83,15 @@
             <small>Custom sessions persist until daily reset. Complete any 3 sessions to finish the daily quest.</small>
         </div>
         
+        <div class="debug-section" style="margin: 15px 0; padding: 10px; background-color: rgba(255, 255, 0, 0.1); border-radius: 5px;">
+            <button onclick="testUserManager()" style="background-color: #ffc107; color: #000; padding: 5px 10px; border: none; border-radius: 3px; cursor: pointer; font-size: 12px;">
+                Test User Manager
+            </button>
+            <small style="display: block; margin-top: 5px; color: rgba(255, 255, 255, 0.7);">
+                Click to test database connection
+            </small>
+        </div>
+        
         <div class="warning-section">
             <p>
                 WARNING: Failure to complete the daily study quest will result in an
