--- a/knowledge-quests.html
+++ b/knowledge-quests.html
@@ -57,7 +57,7 @@
         <div class="goal-item">
           <span class="task-name">Research Training</span>
           <div class="task-right">
-            <span id="researchQuests">[COMING SOON]</span>
+            <span id="researchQuests" onclick="window.location.href='research-training.html'">[AI-Powered Daily Topics]</span>
           </div>
           <div>
             <input
